--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "migrate-mongo",
-  "version": "8.1.4",
+  "version": "8.2.0",
   "description": "A database migration tool for MongoDB in Node",
   "main": "lib/migrate-mongo.js",
   "bin": {
@@ -30,7 +30,9 @@
     "date-fns": "^2.16.1",
     "fn-args": "^5.0.0",
     "fs-extra": "^9.0.1",
+    "fs-readdir-recursive": "^1.1.0",
     "lodash": "^4.17.20",
+    "md5-file": "^5.0.0",
     "mongodb": "^3.6.2",
     "p-each-series": "^2.1.0"
   },
