--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "migrate-mongo",
-    "version": "8.3.0",
+    "version": "11.0.0",
     "description": "A database migration tool for MongoDB in Node",
     "main": "lib/migrate-mongo.js",
+    "type": "module",
     "bin": {
         "migrate-mongo": "bin/migrate-mongo.js"
     },
@@ -21,33 +22,34 @@
         "url": "https://github.com/seppevs/migrate-mongo.git"
     },
     "engines": {
-        "node": ">=8"
+        "node": ">=20"
     },
     "preferGlobal": true,
     "dependencies": {
-        "cli-table3": "^0.6.0",
-        "commander": "^6.1.0",
-        "date-fns": "^2.16.1",
+        "cli-table3": "^0.6.1",
+        "commander": "^9.1.0",
+        "date-fns": "^2.28.0",
+        "esmock": "^2.6.7",
         "fn-args": "^5.0.0",
-        "fs-extra": "^9.0.1",
+        "fs-extra": "^10.0.1",
         "fs-readdir-recursive": "^1.1.0",
-        "lodash": "^4.17.20",
+        "lodash": "^4.17.21",
         "md5-file": "^5.0.0",
-        "mongodb": "^3.6.2",
-        "p-each-series": "^2.1.0"
+        "mongodb": "^6.8.0",
+        "p-each-series": "^2.2.0"
     },
     "devDependencies": {
-        "chai": "^4.2.0",
-        "coveralls": "^3.1.0",
-        "eslint": "^7.11.0",
-        "eslint-config-airbnb-base": "^14.2.0",
-        "eslint-config-prettier": "^6.13.0",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-mocha": "^8.0.0",
-        "mocha": "^8.2.0",
-        "nyc": "^15.1.0",
-        "proxyquire": "^2.1.3",
-        "sinon": "^9.2.0"
+        "chai": "^4.3.6",
+        "coveralls": "^3.1.1",
+        "eslint": "^8.2.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-mocha": "^10.0.3",
+        "esmock": "^2.6.7",
+        "mocha": "^10.7.3",
+        "nyc": "^17.0.0",
+        "sinon": "^13.0.1"
     },
     "eslintConfig": {
         "extends": [
