--- a/package.json
+++ b/package.json
@@ -29,14 +29,15 @@
         "cli-table3": "^0.6.1",
         "commander": "^9.1.0",
         "date-fns": "^2.28.0",
-        "esmock": "^2.6.7",
         "fn-args": "^5.0.0",
         "fs-extra": "^10.0.1",
         "fs-readdir-recursive": "^1.1.0",
         "lodash": "^4.17.21",
         "md5-file": "^5.0.0",
-        "mongodb": "^6.8.0",
         "p-each-series": "^2.2.0"
+    },
+    "peerDependencies": {
+        "mongodb": "^4.4.1 || ^5.0.0 || ^6.0.0"
     },
     "devDependencies": {
         "chai": "^4.3.6",
